--- a/project/views/templates/bowling/structure/head.html.twig
+++ b/project/views/templates/bowling/structure/head.html.twig
@@ -18,9 +18,9 @@
         <script>
             var componentsList = {
 //                'SimpleHeadingSection':  'Простая шапка сайта',
-                'SliderHeadingSection':   'Шапка со слайдером',
+                'SliderHeadingSection':     'Шапка со слайдером',
 
-//                'PageNavSection':        'Панель навигации по странице',
+                'AboutAndServicesSection':  'О нас и о главных услугах',
 
 //                'OverviewSection':       'Описание (три устройства и текст)',
 //                'FeaturePreviewSection': 'Описание (одна картинка, текст и фичи)',
