--- a/project/web/templates/bowling/index.html
+++ b/project/web/templates/bowling/index.html
@@ -333,7 +333,7 @@
     <div class="col-md-5 padd-50" style="padding-right:50px;">
     	<h2 class="story-h2">Our Story</h2>
         <p class="story-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a ligula in velit aliquam efficitur. Quisque facilisis lectus et justo tempor, quis posuere mi posuere. Aliquam eget est sed  male suada elementum. Ut ultrices ligula vitae egestas.Ut ultrices ligula vitae egestas varius.</p>
-    	<div class="read-more text-center"><a href="about-us.html"><img src="images/read-ball.png" / style="margin-top:15px;"><br /><span>Read<br /> More</span></a></div>
+    	<div class="read-more text-center"><a href="about-us.html"><img src="images/read-ball.png"  style="margin-top:15px;"><br /><span>Read<br /> More</span></a></div>
     </div>
     <div class="col-md-1"></div>
     
