--- a/project/views/templates/bowling/structure/base.html.twig
+++ b/project/views/templates/bowling/structure/base.html.twig
@@ -77,7 +77,7 @@
                                         <div class="top-address">
                                             <span class="hidden-sm hidden-xs">г. Самара, </span>{{ settings.address.value }}<br/>
                                             {{ settings.phone.value }}<br/>
-                                            <strong>10.00-22.00</strong> без перерывов<span class="hidden-sm hidden-xs"> и выходных</span>
+                                            <strong style="font-weight: 700;">10.00-22.00</strong> без перерывов<span class="hidden-sm hidden-xs"> и выходных</span>
                                         </div>
                                     </a>
 
