--- a/project/views/templates/bowling/base.html.twig
+++ b/project/views/templates/bowling/base.html.twig
@@ -33,7 +33,7 @@
     <link href="/templates/bowling/css/theme.min.css" rel="stylesheet">
     <link href="/templates/bowling/css/transitions.css" rel="stylesheet">
     <!--flaticon-->
-    <link href="/templates/bowling/font/font/flaticon.css" rel="stylesheet" type="text/css">
+    <link href="/templates/bowling/font/jump-font/flaticon.css" rel="stylesheet" type="text/css">
     <!--date-picker-->
     <link href="/templates/bowling/css/datepicker.css" rel="stylesheet" type="text/css">
 
@@ -205,6 +205,9 @@
 <!--SLIDER-->
 <!--mega menu-->
 <script type="text/javascript" src="/templates/bowling/js/mega_menu.js"></script>
+<script src="/templates/bowling/js/plugins.js"></script>
+<script src="/templates/bowling/js/custom.js"></script>
+
 <!--REVOLUTION JS FILES-->
 <script type="text/javascript" src="/templates/bowling/js/jquery.themepunch.tools.min.js"></script>
 <script type="text/javascript" src="/templates/bowling/js/jquery.themepunch.revolution.min.js"></script>
@@ -219,6 +222,7 @@ The following part can be removed on Server for On Demand Loading) -->
 <!--custom-->
 <script type="text/javascript" src="/templates/bowling/js/custom-slider.js"></script>
 <script src="/templates/bowling/js/main.js"></script>
+
 
 {% block javascripts %}{% endblock %}
 
