--- a/project/views/common/components/data.html.twig
+++ b/project/views/common/components/data.html.twig
@@ -44,6 +44,13 @@
     {%- endif -%}
 {% endmacro %}
 
+{%- macro checklist(value, id, path, editMode = false, variants = {}, inModal = false) -%}
+    {%- import _self as data -%}
+    {%- if editMode -%}
+        <e{% if inModal %}s{% endif %} data-type="checklist" data-url="/e/page/edit/list" data-pk="{{ id }}" data-name="{{ path }}" data-value="[{% for v in value %}'{{ v }}'{% if not loop.last %},{% endif %}{% endfor %}]" data-source="{{ variants | json_encode }}"></e{% if inModal %}s{% endif %}>
+    {%- endif -%}
+{% endmacro %}
+
 {% macro image(value, id, path, editMode = false, attrs = {}, default = "") %}
     {% import _self as data %}
     {% if value is empty %}
@@ -111,8 +118,8 @@
     {% if editMode %}<button type="button" class="btn btn-primary btn-add-object" data-path="{{ path | raw }}" data-pk="{{ id }}">{{ caption }}</button>{% endif %}
 {% endmacro %}
 
-{% macro addItemButton(path, id, editMode = false, caption = "Добавить пункт") %}
-    {% if editMode %}<button type="button" class="btn btn-primary btn-add-item" data-path="{{ path | raw }}" data-pk="{{ id }}">{{ caption }}</button>{% endif %}
+{% macro addItemButton(path, id, editMode = false, caption = "Добавить пункт", inModal = false) %}
+    {% if editMode %}<button type="button" class="btn btn-primary btn-add-item" data-path="{{ path | raw }}" data-pk="{{ id }}"{% if inModal %} data-inmodal="true"{% endif %}>{{ caption }}</button>{% endif %}
 {% endmacro %}
 
 {% macro removeElementButton(path, id, editMode = false, inModal = false) %}
@@ -143,22 +150,27 @@
                                 {% if editor.type == "text" %}
                                     <tr>
                                         <td>{{ editor.title }}</td>
-                                        <td>{{ data.text(value[key], id, path ~ '.' ~ key, editMode, true) }}</td>
+                                        <td style="width:40%;">{{ data.text(value[key], id, path ~ '.' ~ key, editMode, true) }}</td>
                                     </tr>
                                 {% elseif editor.type == "textarea" %}
                                     <tr>
                                         <td>{{ editor.title }}</td>
-                                        <td>{{ data.textarea(value[key], id, path ~ '.' ~ key, editMode, true) }}</td>
+                                        <td style="width:40%;">{{ data.textarea(value[key], id, path ~ '.' ~ key, editMode, true) }}</td>
                                     </tr>
                                 {% elseif editor.type == "select" %}
                                     <tr>
                                         <td>{{ editor.title }}</td>
-                                        <td>{{ data.select(value[key], id, path ~ '.' ~ key, editMode,  editor.options, true) }}</td>
+                                        <td style="width:40%;">{{ data.select(value[key], id, path ~ '.' ~ key, editMode,  editor.options, true) }}</td>
                                     </tr>
                                 {% elseif editor.type == "image" %}
                                     <tr>
                                         <td>{{ editor.title }}</td>
-                                        <td>{{ data.setImagePreviewButton(value[key], id, path ~ '.' ~ key, editMode) }}</td>
+                                        <td style="width:40%;">{{ data.setImagePreviewButton(value[key], id, path ~ '.' ~ key, editMode) }}</td>
+                                    </tr>
+                                {% elseif editor.type == "checklist" %}
+                                    <tr>
+                                        <td>{{ editor.title }}</td>
+                                        <td style="width:40%;">{{ data.checklist(value[key], id, path ~ '.' ~ key, editMode, editor.variants, true) }}</td>
                                     </tr>
                                 {% elseif editor.type == "list" and editor.listType == "image" %}
                                     <tr>
@@ -177,6 +189,23 @@
                                             {{ data.addImagePreviewButton(path ~ '.' ~ key, id, editMode, "Добавить картинку") }}
                                         </td>
                                     </tr>
+                                {% elseif editor.type == "list" and editor.listType == "text" %}
+                                    <tr>
+                                        <td colspan="2">
+                                            <h4>{{ editor.title }}</h4>
+                                            <div class="image-list">
+                                            {% for ki, text in value[key] %}
+                                                <div class="pull-left editor-image-list-element" id="{{ (path ~ '.' ~ key ~ '.' ~ ki) | replace({'.' : '-'}) }}-container">
+                                                {% set textPath = path ~ '.' ~ key ~ '.' ~ ki %}
+                                                {{ data.text(text, id, textPath, editMode, true) }}
+                                                {{ data.removeElementButton(textPath, id, editMode, true ) }}
+                                                </div>
+                                            {% endfor %}
+                                            </div>
+                                            <div class="clearfix"></div>
+                                            {{ data.addItemButton(path ~ '.' ~ key, id, editMode, "Добавить тэг", true) }}
+                                        </td>
+                                    </tr>
                                 {% endif %}
                             {% endfor %}
                         </table>
@@ -185,7 +214,7 @@
                 </div><!--//modal-body-->
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
-                    <button type="button" class="btn btn-primary btn-apply-now">Применить сейчас</button>
+                    <button type="button" class="btn btn-primary btn-apply-now">Обновить сейчас</button>
                 </div>
             </div><!--//modal-content-->
         </div><!--//modal-dialog-->
