Удалил лишний знак

--- a/project/views/templates/bowling/components/components.html.twig
+++ b/project/views/templates/bowling/components/components.html.twig
@@ -411,7 +411,7 @@
                 <p class="story-p">{{ data.text(section.about.story.description, pageId, path ~ '.about.story.description', editMode) }}</p>
                 {#<div class="read-more text-center"><a href="about-us.html"><img src="/templates/bowling/images/read-ball.png"  style="margin-top:15px;"><br /><span>Далее</span></a></div>#}
             </div>
-            <div class="col-md-1"></div>9
+            <div class="col-md-1"></div>
 
             <div class="clearfix"></div>
         </div>
