Поправка. Сделал id для блока с картой

--- a/project/views/templates/bowling/components/components.html.twig
+++ b/project/views/templates/bowling/components/components.html.twig
@@ -236,7 +236,7 @@
     {% import "/common/components/data.html.twig" as data %}
 
     <!--Contact-->
-    <div class="container-fluid contact-bg" style="background-image:url({{ section.bg | default('/templates/bowling/images/welcome-bg.jpg') }}); background-repeat:no-repeat;">
+    <div id="contacts-with-map" class="container-fluid contact-bg" style="background-image:url({{ section.bg | default('/templates/bowling/images/welcome-bg.jpg') }}); background-repeat:no-repeat;">
         <div class="container padd-50 contact-container">
 
             <div class="col-sm-4 col-md-4">
