Поправка. Добавил галерею с одной колонкой

--- a/project/views/templates/bowling/components/components.html.twig
+++ b/project/views/templates/bowling/components/components.html.twig
@@ -629,6 +629,7 @@
                 'type': 'select',
                 'title': 'Количество колонок',
                 'options': [
+                    {value: 12, text: '1'},
                     {value: 6, text: '2'},
                     {value: 4, text: '3'},
                     {value: 3, text: '4'}
