У галереи без тегов убрал паддинг

--- a/project/views/templates/bowling/components/components.html.twig
+++ b/project/views/templates/bowling/components/components.html.twig
@@ -670,7 +670,7 @@
                 </div>
             {% endif %}
 
-            <div class="row" id="portfolio-grid"{% if not section.showTags %} style="padding-top: 0;"{% endif %}>
+            <div class="row" id="portfolio-grid"{% if not section.showTags %} style="margin-top: 0;"{% endif %}>
 
                 {% for k, photo in section.photos %}
                     {% set photoPath = path ~ '.photos.' ~ k %}
