--- a/project/views/templates/bowling/components/components.html.twig
+++ b/project/views/templates/bowling/components/components.html.twig
@@ -659,7 +659,7 @@
 
                 <div class="col-sm-12 text-center">
                     <div id="projects-filter">
-                        <div class="gallery-head" style="max-width: 800px;">
+                        <div class="gallery-head" style="max-width: 100%;">
                             <a href="#" data-filter="*" class="active">Все</a>
                             {% for k, tag in section.tags %}
                                 {% set tagPath = path ~ '.tags.' ~ k %}
