--- a/project/views/templates/diagram/components/top.html.twig
+++ b/project/views/templates/diagram/components/top.html.twig
@@ -19,7 +19,7 @@
                         {% for k,slide in section.slides %}
                             {% set slidePath = path ~ '.slides.' ~ k %}
                             <div class="item{% if loop.first %} active{% endif %}">
-                                <h2>{{ data.text(slide.title, pageId, slidePath ~ '.title', editMode) }}{{ data.setImageButton(slide.image, pageId, slidePath ~ '.image', editMode, '/templates/diagram/images/bg/1.jpg') }}{{ data.settingsButton(slidePath, editMode) }}{{ data.removeElementButton(slidePath, pageId, editMode) }}</h2>
+                                <h2 style="{{ slide.textStyle | raw }}">{{ data.text(slide.title, pageId, slidePath ~ '.title', editMode) }}{{ data.setImageButton(slide.image, pageId, slidePath ~ '.image', editMode, '/templates/diagram/images/bg/1.jpg') }}{{ data.settingsButton(slidePath, editMode) }}{{ data.removeElementButton(slidePath, pageId, editMode) }}</h2>
                                 {% if slide.showButton %}
                                     {{ data.a(slide.button, pageId, slidePath ~ '.button', editMode, {'class': 'btn btn-primary'}) }}
                                 {% endif %}
@@ -71,6 +71,10 @@
                         {value: 0, text: 'Отсутствует'},
                         {value: 1, text: 'Есть'}
                     ]
+                },
+                'textStyle': {
+                    'type': 'text',
+                    'title': 'Дополнительный стиль'
                 }
             },
         editMode) }}
